discode-web/src/app/home/message/message.component.scss
@import "src/colors.scss";

code,
code * {
    font-size: medium !important;
}

.message-box {
    border-radius: 5px;
    padding: 10px;
    margin: 0;
    overflow-x: hidden;

    .report {
        display: none;
    }
}

.message-box:hover {
    background-color: $discode-darker;

    .btn-discode-darker {
        background-color: $discode-green !important;
        color: black;
    }

    .report {
        display: inline;
    }
}

.message-box::after {
    content: "";
    clear: both;
    display: table;
}

.message-time {
    font-size: small;
    font-style: italic;
    margin-top: 3px;
}

.username {
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
    font-weight: bold;
    max-width: 20vw;
}

.divider {
    color: $discode-blue;
}

.report {
    font-style: italic;
    color: $discode-green;
    margin-left: 10px;
}

.report:hover {
    cursor: pointer;
    color: $discode-dark-green;
}

.more-actions {
    margin-left: 52vw;
}

li .menu-list {
    cursor: pointer;
}

.message-profile-pic {
    width: 100%;
    height: 100%;
    max-width: 60px;
    max-height: 60px;
    margin-right: 20px;
    border-radius: 4px;
    float: left;
    object-fit: contain;
}

.message-info {
    > span,
    > div {
        margin-right: 5px;
        margin-bottom: 5px;
        justify-content: center;
    }
    > span {
        display: flex;
    }
}

.code-window {
    background-color: $discode-darkest;
    border-radius: 4px;
    max-height: 400px;
    min-width: 600px;
    max-width: 65vw;
}

.code-content {
    code {
        background-color: $discode-darkest;
    }
}

.code-output {
    padding: 15px;
    font-size: 100%;
    color: $discode-light;
}

.language-selector {
    max-width: 250px;
    max-height: 40px;
    font-size: small;
}

.code-options * {
    margin: 5px;
}

.message-content {
    max-width: 60vw;
    word-wrap: break-word;
}

